bundle resources and set icon and banner

--- a/cmd/republique-ui/makefile
+++ b/cmd/republique-ui/makefile
@@ -1,7 +1,22 @@
 all:  install
 
-install:
+install: bundle.go
 	go install ./...
 
-run: 
+run: install
 	republique-ui
+
+bundle.go: republique.png
+	fynce bundle republique.png > bundle.go
+
+build: bundle.go
+	go build ./...
+
+package-darwin: bundle.go
+	GOOS=darwin go build ./...
+	fyne package -os darwin -icon republique.png
+
+package-linux: bundle.go
+	GOOS=linux go build ./...
+	fyne package -os linux -icon republique.png
+
