on loading a game in the pre-game stage, calculate the game state for all commands, subcommands and units

--- a/cmd/republique-ui/makefile
+++ b/cmd/republique-ui/makefile
@@ -6,7 +6,7 @@ install: bundle.go
 run: install
 	republique-ui
 
-bundle.go: *.png *.jpg
+bundle.go: *.jpg
 	#fyne bundle republique.png > bundle.go
 	fyne bundle icon.jpg > bundle.go
 
