travis needs fyne ?

--- a/cmd/republique-ui/makefile
+++ b/cmd/republique-ui/makefile
@@ -8,6 +8,7 @@ run: install
 
 bundle.go: *.jpg
 	#fyne bundle republique.png > bundle.go
+	go get fyne.io/fyne
 	fyne bundle icon.jpg > bundle.go
 
 build: bundle.go
