--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - NO_VENDOR=$(find . -iname '*.go' -type f | grep -v /vendor/)
   - go get golang.org/x/lint/golint
   - go get github.com/mattn/goveralls
-  - go get fyne.io/fyne
+  #- go get fyne.io/fyne
 
 script:
   - env GO111MODULE=on go build
